# openstack-ansible-pip_install

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  other-requirements.txt  run_tests.sh  setup.cfg  tox.ini
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py  index.rst
examples/: playbook.yml
files/: pip-link-build.py
handlers/: main.yml
meta/: main.yml
releasenotes/notes/: suse-support-7919a5e43ebdd793.yaml
releasenotes/source/: conf.py
tasks/: configure.yml  install.yml  install_binary.yml  install_offline.yml  install_online.yml  install_source.yml  lockdown.yml  main.yml  pre_install.yml  pre_install_apt.yml  pre_install_dnf.yml  pre_install_yum.yml  pre_install_zypper.yml
templates/: global.conf.j2  pip.conf.j2
tests/: test.yml
vars/: debian.yml  redhat-7.yml  redhat.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml
zuul.d/: project.yaml
